--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
@@ -14,7 +15,11 @@
     "jade": "~1.11.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.0",
+    "socket.io-client": "^4.7.0",
+    "socketio": "^1.0.0"
   },
   "main": "app.js",
   "author": "",
